--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'OpenSans-LightItalic';
-  font-weight: 300;
+  font-family: 'Quicksand-Medium';
+  font-weight: 500;
   font-style: italic;
   src: local('OpenSans-LightItalic'),
     url('../fonts/OpenSans-LightItalic.woff2') format('woff2'),
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: 'OpenSans-Regular';
+  font-family: 'Quicksand-Regular';
   font-weight: 400;
   font-style: normal;
   src: local('OpenSans-Regular'),
@@ -19,8 +19,8 @@
 }
 
 @font-face {
-  font-family: 'OpenSans-SemiBold';
-  font-weight: 600;
+  font-family: 'Roboto-Regular';
+  font-weight: 400;
   font-style: normal;
   src: local('OpenSans-SemiBold'),
     url('../fonts/OpenSans-SemiBold.woff2') format('woff2'),
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-  font-family: 'OpenSans-Bold';
+  font-family: 'Roboto-Bold';
   font-weight: 700;
   font-style: normal;
   src: local('OpenSans-Bold'),
