--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,3 +10,16 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+body {
+  font-size: 16px;
+  line-height: 1.5;
+  color: $default;
+  @extend %quicksand-500;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
