--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,66 @@
 @import 'libs';
 @import 'global';
 
+.header {
+  padding: 40px 0;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 
+.menu {
+  &__list {
+    display: flex;
+  }
+  &__list-item + .menu__list-item {
+    margin-left: 34px;
+  }
+
+  &__list-link {
+    padding-bottom: 2px;
+    color: $title;
+    border-bottom: 1px solid transparent;
+    transition: all 0.4s;
+    text-transform: uppercase;
+    &:hover {
+      color: $accent;
+      border-bottom: 1px solid $accent;
+    }
+  }
+
+  &__list-link--active {
+    color: $accent;
+    border-bottom: 1px solid $accent;
+  }
+}
+
+.user-nav {
+  display: flex;
+
+  &__link + .user-nav__link {
+    margin-left: 24px;
+  }
+
+  &__link {
+    position: relative;
+  }
+
+  &__num {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    color: $white;
+  }
+}
 
 @import 'media';
 
