--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -23,3 +23,10 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+a {
+  font-size: 16px;
+  line-height: 1.6;
+  color: $default;
+  @extend %quicksand-500;
+}
