--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,6 +31,14 @@
       color: $accent;
       border-bottom: 1px solid $accent;
     }
+    &:focus {
+      /* color: $accent;
+      border-bottom: 1px solid $accent; */
+    }
+    &:active {
+      /* color: $accent;
+      border-bottom: 1px solid $accent; */
+    }
   }
 
   &__list-link--active {
@@ -65,6 +73,183 @@
   }
 }
 
+.footer {
+  background-color: $bg;
+}
+
+
+.footer-top {
+  display: flex;
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  
+  
+  &__contact {
+    width: 250px;
+    margin-right: 50px;
+  }
+
+  &__logo {
+    display: block;
+    margin-bottom: 22px;
+  }
+
+  &__adress,
+  &__email,
+  &__phone {
+    display: block;
+    margin-bottom: 10px;
+
+    transition: all 0.4s;
+    outline: transparent;
+
+    &:hover {
+      filter: brightness(120%);
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    }
+  }
+
+  &__social-list {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  &__social-item + .footer-top__social-item {
+    margin-left: 18px;
+  }
+
+
+  &__social-link {
+    outline: transparent;
+    transition: opacity 0.4s;
+    padding: 4px;
+    svg {
+      transition: fill 0.4s;
+      fill: $default;
+    }
+
+    &:hover svg {
+      fill: $accent;
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    }
+
+  }
+
+  &__nav {
+    width: 170px;
+    margin-right: 30px;
+
+  }
+
+  &__title {
+    margin-bottom: 30px;
+    @extend %quicksand-500;
+    font-size: 22px;
+    color: $title;
+    line-height: 1;
+  }
+
+  &__item {
+
+    margin-bottom: 10px;
+  }
+
+  &__link {
+    transition: all 0.4s;
+    outline: transparent;
+    &:hover {
+      filter: brightness(120%);
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    } 
+  }
+
+  &__item-form {
+    max-width: 470px;
+  }
+
+  &__text {
+    margin-bottom: 20px;
+  }
+
+  &__form-input {
+    max-width: 320px;
+    width: 100%;
+    border: none;
+    background-color: $white;
+    padding: 12px 6px;
+    outline: transparent;
+    transition: all 0.4s;
+    box-shadow: 0px 7px 20px 0px rgb(192 192 192 / 30%);
+    &::placeholder {
+      color: $default;
+      font-size: 16px;
+    }
+
+    &:hover {
+      filter: brightness(120%);
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    } 
+  }
+
+  &__form-btn {
+    padding: 12px 26px;
+    background-color: $accent;
+    color: $white;
+    text-transform: uppercase;
+    transition: all 0.4s;
+    outline: transparent;
+    box-shadow: 0px 7px 20px 0px rgb(255 17 48 / 30%);
+    &:hover {
+      filter: brightness(120%);
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    } 
+  }
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 74px;
+  &__accept {
+    display: flex;
+    align-items: center;
+  }
+  &__accept-img {
+    margin-left: 20px;
+  }
+}
 @import 'media';
 
 
