--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -411,7 +411,59 @@
   }
 }
 
+.video-fashion {
+  padding: 124px 0;
+  background: url('../images/video/pattern-fashion.svg') no-repeat center / cover;
+  background-color: $bg;
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
+  &__popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    background: no-repeat center / cover;
+  }
+
+  &__play {
+    transition: all 0.4s;
+    outline: transparent;
+    border-radius: 50%;
+    &:hover {
+      filter: brightness(120%);
+    }
+    &:active {
+      filter: brightness(90%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 50%;
+    } 
+  }
+  &__content {
+    max-width: 570px;
+  }
+
+  &__subtitle {
+    margin-bottom: 5px;
+    font-size: 22px;
+    text-transform: uppercase;
+    color: $accent;
+  }
+  &__title {
+    text-align-last: left;
+  }
+
+  &__text {
+    margin-bottom: 55px;
+  }
+}
 
 
 
