--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -53,6 +53,27 @@ a {
   } 
 }
 
+.btn-two {
+  display: inline-block;
+  padding: 14px 26px;
+  color: $title;
+  text-transform: uppercase;
+  border: 1px solid $accent;
+  transition: all .4s;
+  outline: transparent;
+    &:hover {
+      background-color: $accent;
+      color: $white;
+    }
+    &:active {
+      filter: brightness(50%);
+    }
+    &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    } 
+}
+
 .title {
   margin-bottom: 10px;
   text-align: center;
