--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -465,8 +465,119 @@
   }
 }
 
+.product {
+  padding: 105px 0 120px;
+  text-align: center;
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 45px 30px;
+  }
+  &__link {
+    margin-top: 50px;
+  }
+}
 
+.product-item {
+  max-width: 370px;
 
+  &--sale {
+    .product-item__img-box::before {
+      content: 'SALE';
+      position: absolute;
+      left: 10px;
+      top: 10px;
+      display: inline-block;
+      padding: 14px 26px;
+      color: $white;
+      background-color: $accent;
+      text-transform: uppercase;
+      
+    }
+  }
+  
+  &__img-box {
+    position: relative;
+    height: 370px;
+    margin-bottom: 24px;
+    overflow: hidden;
+  }
+  &__images {
+    object-fit: cover;
+  }
+  &__link-box {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 220px;
+    height: 50px;
+    margin: 0 auto;
+    box-shadow: 0 5px 30px 0 rgba(152, 152, 152, 0.2);
+    border-radius: 22px;
+    background-color: $white;
+    transform: translateY(200%);
+    transition: transform 0.4s;
+  }
+
+  &:hover .product-item__link-box{
+    transform: translateY(0);
+  }
+  &__link {
+    display: inherit;
+    transition: all 0.4s;
+    
+    &:hover {
+      fill: $accent;
+    }
+    
+     &:focus {
+      box-shadow: 0 0 0 3px rgb(62 66 100 / 70%);
+      border-radius: 5px;
+    } 
+  }
+  &__link--line::before,
+  &__link--line::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 30px;
+    background-color: $default;
+  }
+  &__link--line::before {
+    top: 11px;
+    left: 70px;
+  }
+  &__link--line::after {
+    top: 11px;
+    right: 70px;
+  }
+
+  &__title {
+    color: $title;
+    padding: 15px 0 20px;
+  }
+
+  &__price {
+    display: flex;
+    justify-content: center 
+  }
+  &__price-new {
+    padding: 0 12px;
+    color: $title;
+  }
+  &__price-old {
+    padding: 0 12px;
+    text-decoration: line-through;
+  }
+}
+
+.star {
+  margin: 0 auto;
+}
 @import 'media';
 
 
